--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="shortcut icon" href="https://chessboardjs.com/img/favicon.ico" type="image/x-icon">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+<!--bootstrap-->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<!--bootstrap-->
 <link rel="stylesheet" href="css/website2.css">
 <link rel="stylesheet"
 href="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css"
 integrity="sha384-q94+BZtLrkL1/ohfjR8c6L+A6qzNH9R2hBLwyoAfu3i/WCvQjzL2RQJ3uNHDISdU"
 crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2"
-        crossorigin="anonymous"></script> 
 <script src="js/chessboard-1.0.0.min.js"></script> 
 <!--<script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js"
         integrity="sha384-8Vi8VHwn3vjQ9eUHUxex3JSN/NFqUg3QbPyX8kWyb93+8AC/pPWTzj+nHtbC5bxD"
@@ -59,23 +62,24 @@ crossorigin="anonymous">
         </nav>
         <div class="examples-body-9af4d" id="exampleBodyContainer" data-id="0">
             <div class="example-block-head d-flex justify-content-between">
-				<div>
-					<nav aria-label="Page navigation example">
-						<div class="page-item" hidden><a class="page-link" id="pageId" href="#">1</a></div>
-						<ul class="pagination" id="pageUl">
-							<li class="page-item" id="previousPageLi"> <a class="page-link" href="#" aria-label="Previous" onClick="change_page(false)" id=""> <span aria-hidden="true">&laquo;</span> <span class="sr-only">Previous</span> </a> </li>
-							<li class="page-item" id="nextPageLi"> <a class="page-link" href="#" aria-label="Next" onClick="change_page(true)"> <span aria-hidden="true">&nbsp;</span> <span class="sr-only">Next</span> </a> </li>
-						</ul>
-					</nav>
-				</div>
-				<div>
-					<nav class="navbar navbar-light">
-					  <form class="form-inline">
-						<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-						<button class="btn btn-outline-success" type="submit"><i class="fa fa-search"></i></button>
-					  </form>
-					</nav>
-				</div>
+                <div style="margin-top: 7px">
+                    <nav aria-label="Page navigation example">
+                        <div class="page-item" hidden><a class="page-link" id="pageId" href="#">1</a></div>
+                        <ul class="pagination" id="pageUl">
+                            <li class="page-item" id="previousPageLi"> <a class="page-link" href="#" aria-label="Previous" onClick="change_page(false)" id=""> <span aria-hidden="true">&laquo;</span> <span class="sr-only">Previous</span> </a> </li>
+                            <li class="page-item" id="nextPageLi"> <a class="page-link" href="#" aria-label="Next" onClick="change_page(true)"> 
+								<span aria-hidden="true">&raquo;</span> <span class="sr-only">Next</span> </a> </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div>
+                    <nav class="navbar navbar-light">
+                        <form class="form-inline">
+                            <input class="form-control mr-sm-2" type="search" placeholder="" aria-label="Search">
+                            <button class="btn btn-outline-success" type="submit"><i class="fa fa-search"></i></button>
+                        </form>
+                    </nav>
+                </div>
             </div>
             <div id="fakeBodyContainer" hidden>
                 <div class="container-4e1ee">
@@ -112,9 +116,9 @@ crossorigin="anonymous">
             </div>
             <div id="realBodyContainer"> </div>
         </div>
-		<div class="examples-body-9af4d" data-id="1" style="display:none">
-			<h4>心有所住</h4>
-		</div>
+        <div class="examples-body-9af4d" data-id="1" style="display:none">
+            <h4>心有所住</h4>
+        </div>
     </div>
 </main>
 <footer>
