--- a/pagination.html
+++ b/pagination.html
@@ -4,26 +4,38 @@
 <meta charset="utf-8">
 <title>Untitled Document</title>
 <link rel="stylesheet" href="css/website2.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2"
-        crossorigin="anonymous"></script> 
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	
 <script src="js/paginationa.js"></script> 
 <script>
 $( document ).ready(hello_world);
 </script>
 </head>
-<ul class="pagination" id="pageUl">
-    <li class="page-item" id="previousPageLi"><a class="page-link" href="#" aria-label="Previous" onClick="change_page(false)" id=""><span aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a></li>
-<!--	<li class="page-item"><a class="page-link" href="#">4</a></li>
+<body>
+
+<div>
+    <ul class="pagination" id="pageUl">
+        <li class="page-item" id="previousPageLi"><a class="page-link" href="#" aria-label="Previous" onClick="change_page(false)" id=""><span aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a></li>
+        <!--	<li class="page-item"><a class="page-link" href="#">4</a></li>
     <li class="page-item"><a class="page-link" href="#">5</a></li>
     <li class="page-item"><a class="page-link" href="#">6</a></li>
 	<li class="page-item"><a class="page-link" href="#">7</a></li>
     <li class="page-item"><a class="page-link" href="#">8</a></li>-->
-    <li class="page-item" id="nextPageLi"><a class="page-link" href="#" aria-label="Next" onClick="change_page(true)"><span aria-hidden="true">&raquo;</span><span class="sr-only">Next</span></a></li>
-</ul>
-	
-
-<body>
+        <li class="page-item" id="nextPageLi"><a class="page-link" href="#" aria-label="Next" onClick="change_page(true)"><span aria-hidden="true">&raquo;</span><span class="sr-only">Next</span></a></li>
+    </ul>
+</div>
+<div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <img src="img/chesspieces/wikipedia/bB.png">
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+    <button class="dropdown-item" type="button">Action</button>
+    <button class="dropdown-item" type="button">Another action</button>
+    <button class="dropdown-item" type="button">Something else here</button>
+  </div>
+</div>
 </body>
 </html>
