--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ crossorigin="anonymous">
                     <div class="dropdown">
                         <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> A </button>
                         <div class="dropdown-menu">
-                            <button class="dropdown-item" type="button" data-id="0">B</button>
+                            <button class="dropdown-item" type="button" data-id="0">A</button>
                             <button class="dropdown-item" type="button" data-id="0">B</button>
                             <button class="dropdown-item" type="button" data-id="1">C</button>
                             <button class="dropdown-item" type="button" data-id="2">D</button>
