add menu button

--- a/index.html
+++ b/index.html
@@ -64,24 +64,24 @@ crossorigin="anonymous">
             <div class="example-block-head d-flex justify-content-between">
                 <div class="row">
                     <div class="dropdown">
-                        <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <img src="img/chesspieces/wikipedia/wB.png"> </button>
+                        <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-id="B"> <img src="img/chesspieces/wikipedia/wB.png"> </button>
                         <div class="dropdown-menu">
-                            <button class="dropdown-item" type="button" data-id="0"><img src="img/chesspieces/wikipedia/wP.png"></button>
-                            <button class="dropdown-item" type="button" data-id="1"><img src="img/chesspieces/wikipedia/wN.png"></button>
-                            <button class="dropdown-item" type="button" data-id="2"><img src="img/chesspieces/wikipedia/wB.png"></button>
-                            <button class="dropdown-item" type="button" data-id="3"><img src="img/chesspieces/wikipedia/wR.png"></button>
-                            <button class="dropdown-item" type="button" data-id="4"><img src="img/chesspieces/wikipedia/wQ.png"></button>
+                            <button class="dropdown-item" type="button" data-id="P"><img src="img/chesspieces/wikipedia/wP.png"></button>
+                            <button class="dropdown-item" type="button" data-id="N"><img src="img/chesspieces/wikipedia/wN.png"></button>
+                            <button class="dropdown-item" type="button" data-id="B"><img src="img/chesspieces/wikipedia/wB.png"></button>
+                            <button class="dropdown-item" type="button" data-id="R"><img src="img/chesspieces/wikipedia/wR.png"></button>
+                            <button class="dropdown-item" type="button" data-id="Q"><img src="img/chesspieces/wikipedia/wQ.png"></button>
                         </div>
                     </div>
                     <div class="dropdown">
-                        <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> A </button>
+                        <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> C </button>
                         <div class="dropdown-menu">
-                            <button class="dropdown-item" type="button" data-id="0">A</button>
-                            <button class="dropdown-item" type="button" data-id="0">B</button>
-                            <button class="dropdown-item" type="button" data-id="1">C</button>
-                            <button class="dropdown-item" type="button" data-id="2">D</button>
-                            <button class="dropdown-item" type="button" data-id="3">E</button>
-                            <button class="dropdown-item" type="button" data-id="4">F</button>
+                            <button class="dropdown-item" type="button" data-id="A">A</button>
+                            <button class="dropdown-item" type="button" data-id="B">B</button>
+                            <button class="dropdown-item" type="button" data-id="C">C</button>
+                            <button class="dropdown-item" type="button" data-id="D">D</button>
+                            <button class="dropdown-item" type="button" data-id="E">E</button>
+                            <button class="dropdown-item" type="button" data-id="F">F</button>
                         </div>
                     </div>
                 </div>
