--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ crossorigin="anonymous">
                         </div>
                     </div>
                     <div class="dropdown">
-                        <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> C </button>
+                        <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-id="C"> C </button>
                         <div class="dropdown-menu">
                             <button class="dropdown-item" type="button" data-id="A">A</button>
                             <button class="dropdown-item" type="button" data-id="B">B</button>
@@ -133,8 +133,8 @@ crossorigin="anonymous">
                 <nav aria-label="Page navigation example">
                     <div class="page-item" hidden><a class="page-link" id="pageId" href="#">1</a></div>
                     <ul class="pagination" id="pageUl">
-                        <li class="page-item" id="previousPageLi"> <a class="page-link" href="#" aria-label="Previous" onClick="change_page(false)" id=""> <span aria-hidden="true">&laquo;</span> <span class="sr-only">Previous</span> </a> </li>
-                        <li class="page-item" id="nextPageLi"> <a class="page-link" href="#" aria-label="Next" onClick="change_page(true)"> <span aria-hidden="true">&raquo;</span> <span class="sr-only">Next</span> </a> </li>
+                        <li class="page-item" id="previousPageLi"> <a class="page-link" href="#" aria-label="Previous" id=""> <span aria-hidden="true">&laquo;</span> <span class="sr-only">Previous</span> </a> </li>
+                        <li class="page-item" id="nextPageLi"> <a class="page-link" href="#" aria-label="Next"> <span aria-hidden="true">&raquo;</span> <span class="sr-only">Next</span> </a> </li>
                     </ul>
                 </nav>
             </div>
