update book menu

--- a/index.html
+++ b/index.html
@@ -76,12 +76,16 @@ crossorigin="anonymous">
                     <div class="dropdown">
                         <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-id="C"> C </button>
                         <div class="dropdown-menu">
+							<button class="dropdown-item" type="button" data-id="0">-</button>
                             <button class="dropdown-item" type="button" data-id="A">A</button>
                             <button class="dropdown-item" type="button" data-id="B">B</button>
                             <button class="dropdown-item" type="button" data-id="C">C</button>
                             <button class="dropdown-item" type="button" data-id="D">D</button>
                             <button class="dropdown-item" type="button" data-id="E">E</button>
                             <button class="dropdown-item" type="button" data-id="F">F</button>
+							<button class="dropdown-item" type="button" data-id="G">G</button>
+							<button class="dropdown-item" type="button" data-id="H">H</button>
+							<button class="dropdown-item" type="button" data-id="I">I</button>
                         </div>
                     </div>
                 </div>
