--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@ crossorigin="anonymous">
             <div class="example-block-head d-flex justify-content-between">
                 <div class="row">
                     <div class="dropdown">
-                        <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-id="B"> <img src="img/chesspieces/wikipedia/wB.png"> </button>
+                        <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-id="0"> <img src="img/chesspieces/wikipedia/0.png"> </button>
                         <div class="dropdown-menu">
+							<button class="dropdown-item" type="button" data-id="0"><img 
+							src="img/chesspieces/wikipedia/0.png"></button>
                             <button class="dropdown-item" type="button" data-id="P"><img src="img/chesspieces/wikipedia/wP.png"></button>
                             <button class="dropdown-item" type="button" data-id="N"><img src="img/chesspieces/wikipedia/wN.png"></button>
                             <button class="dropdown-item" type="button" data-id="B"><img src="img/chesspieces/wikipedia/wB.png"></button>
@@ -74,7 +76,7 @@ crossorigin="anonymous">
                         </div>
                     </div>
                     <div class="dropdown">
-                        <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-id="C"> C </button>
+                        <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-id="0"> - </button>
                         <div class="dropdown-menu">
 							<button class="dropdown-item" type="button" data-id="0">-</button>
                             <button class="dropdown-item" type="button" data-id="A">A</button>
